<resources>
    <string name="exampleTime">5/1/2019 2:14:45 pm</string>
    <string name="exampleSystolic">110</string>
    <string name="exampleDiastolic">75</string>
    <string name="exampleNotes">Forgot Meds</string>
    <string name="examplePulse">80</string>

    <string name="app_name">BloodPressureLog</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="iconLog">Log BP</string>
    <string name="iconHistory">History</string>
    <string name="iconStats">BP Stats</string>
    <string name="iconRecs">Recommendations</string>
    <string name="iconSettings">Settings</string>
    <string name="history">History</string>
    <string name="logTitle">Blood Pressure Log</string>
    <string name="systolic">Systolic</string>
    <string name="diastolic">Diastolic</string>
    <string name="pulse">Pulse</string>
    <string name="notes">Notes</string>
    <string name="btnLogBP">Log BP</string>
    <string name="guidelinesTitle">Guidelines</string>
    <string name="bpInputHint"> mmHG</string>
    <string name="pulseHint"> BPM</string>
    <string name="notesHint"> Optional</string>
    <string name="errorMsg">The information you entered is not valid.  Please try again.</string>
    <string name="caseOneWarning">Your Blood Pressure is Normal</string>
    <string name="caseTwoWarning">Your Blood Pressure is Elevated</string>
    <string name="caseThreeWarning">Your Blood Pressure Indicates Stage 1 Hypertension</string>
    <string name="caseFourWarning">Your Blood Pressure Indicates Stage 2 Hypertension</string>
    <string name="caseFiveWarning">Your Blood Pressure is Low</string>
    <string name="caseSixWarning">You Blood Pressure Indicates a Hypertensive Crisis.  Please seek medical assistance.</string>
    <string name="ASARecs">These guidelines are based on recommendations from the American Stroke Association.  The American Stroke
    Association is a national voluntary health agency to help reduce disability and death from cardiovascular diseases and stroke.
    Click the link below for more information.</string>
    <string name="info">Info</string>
    <string name="enter">Enter</string>
    <string name="splashImage">Blood Pressure image</string>
    <string name="chartImage">Blood Pressure Guidelines Chart</string>
    <string name="terms">Terms and Conditions</string>
    <string name="agree">I Agree to the terms and conditions</string>
    <string name="checkBelow">Checking below asserts</string>
    <string name="disclaim">The information contained in the Blood Pressure Log mobile app (\"The Service\") is for general information purposes only.  Brian Wawczak (\"The creator\") assumes no
    responsibility for error or omissions in the contents of the Service.  In no event shall the creator be liable for any special, direct, indirect, consequential, or incidental damages
    or any damages whatsoever, whether in an action of contract, negligence or other sort, arising out of or in connection with the use of the Service or the contents of the Service.  This app should
    not be used for the diagnoses or treatment of any medical condition.  All medical decisions and or treatment should be thoroughly discussed with a doctor.  The creator reserves the
    right to make additions, deletions, or modifications to the contents of the Service at any time without prior notice.  This Disclaimer has been created with the help of
    TermsFeed Disclaimer Generator.\n\n
    External links disclaimer\n
        The Service contains links to external websites that are not provided or maintained by or in any way affiliated with the creator.
        Please note that the creator does not guarantee the accuracy, relevance, timeliness, or completeness of any information on these external websites.
    </string>

</resources>
