<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/logBp"
        android:icon="@drawable/ic_add_circle_black_24dp"
        android:title="@string/iconLog"/>

    <item
        android:id="@+id/history"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/iconHistory" />

    <item
        android:id="@+id/stats"
        android:icon="@drawable/ic_insert_chart_black_24dp"
        android:title="@string/iconStats" />

    <item
        android:id="@+id/recs"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/iconRecs" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/iconSettings" />


</menu>