<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/listParentLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/date_time"
        android:layout_width="326dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/exampleTime"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/systolicText"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/exampleSystolic"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/date_time" />

    <TextView
        android:id="@+id/diastolicText"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_centerVertical="true"


        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/exampleDiastolic"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/date_time" />

    <TextView
        android:id="@+id/pulseText"
        android:layout_width="48dp"
        android:layout_height="30dp"


        android:layout_marginTop="8dp"
        android:text="@string/examplePulse"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/systolicText"
        app:layout_constraintTop_toBottomOf="@+id/systolicText" />

    <TextView
        android:id="@+id/notesText"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@id/pulseText"
        android:layout_centerVertical="true"

        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/exampleNotes"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/pulseText"
        app:layout_constraintTop_toBottomOf="@+id/pulseText" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="65dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/systolic"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_time" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/diastolic"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/systolicText"
        app:layout_constraintTop_toBottomOf="@+id/date_time" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:text="@string/notes"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:text="@string/pulse"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


</android.support.constraint.ConstraintLayout>