<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bpSlate"
    tools:context=".DisclaimerPage">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@color/bpGray">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:text="@string/terms"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textTitle"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/disclaim"
                android:textColor="@android:color/black"
                />
        </RelativeLayout>
    </ScrollView>

    <CheckBox
        android:id="@+id/idCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_below="@id/scrollView2"

        android:checked="false"
        android:text="@string/agree"
        android:textColor="@color/colorPrimary"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"/>

    <Button
        android:id="@+id/btnEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@color/bpBlue"
        android:text="@string/enter"
        android:layout_below="@id/idCheckBox"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"/>

</RelativeLayout>