<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bpSlate">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        android:clickable="false"
        android:inputType="none"
        android:text="@string/logTitle"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:clickable="false"
        android:gravity="center"
        android:inputType="none"
        android:text="@string/systolic"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTimeDisplay" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:clickable="false"
        android:gravity="center"
        android:inputType="none"
        android:text="@string/diastolic"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:clickable="false"
        android:gravity="center"
        android:inputType="none"
        android:text="@string/pulse"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:clickable="false"
        android:gravity="center"
        android:inputType="none"
        android:text="@string/notes"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText

        android:id="@+id/idSystolicInput"
        android:layout_width="210dp"
        android:layout_height="32dp"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:focusable="true"
        android:ems="10"
        android:hint="@string/bpInputHint"
        android:inputType="number"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/bpGray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/idTimeDisplay"
        android:importantForAutofill="no"
        tools:targetApi="o" />

    <EditText
        android:importantForAutofill="no"
        tools:targetApi="o"
        android:id="@+id/idDiastolicInput"
        android:layout_width="210dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:focusable="true"
        android:ems="10"
        android:hint="@string/bpInputHint"
        android:inputType="number"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/bpGray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/idSystolicInput"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/idSystolicInput"
        app:layout_constraintTop_toBottomOf="@+id/idSystolicInput" />

    <EditText
        android:importantForAutofill="no"
        tools:targetApi="o"
        android:id="@+id/idPulseInput"
        android:layout_width="210dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:focusable="true"
        android:ems="10"
        android:hint="@string/pulseHint"
        android:inputType="number"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/bpGray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/idDiastolicInput"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/idDiastolicInput"
        app:layout_constraintTop_toBottomOf="@+id/idDiastolicInput" />

    <EditText
        android:importantForAutofill="no"
        tools:targetApi="o"
        android:id="@+id/idNotesInput"
        android:layout_width="210dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:focusable="true"
        android:ems="10"
        android:hint="@string/notesHint"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/bpGray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/idPulseInput"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/idPulseInput"
        app:layout_constraintTop_toBottomOf="@+id/idPulseInput" />

    <TextView
        android:id="@+id/idTimeDisplay"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/idLogDisplay"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idNotesInput" />

    <Button
        android:id="@+id/btnLogBP"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/btnLogBP"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>